2007-03-29  dima  <dima.exe@gmail.com>

	* rails-ui.el: created seperate menu group for tests

	* rails-test.el: created, Added tests integration with the compile library

	* rails-scripts.el: refactored

	* rails-rake.el: refactored

	* rails-lib.el (rails-completing-read): created

2007-03-28  dima  <dima.exe@gmail.com>

	* rails-rake.el (rails-rake:task): removed rails-rake:output-mode

	* rails.el: added forward declaration of try-complete-abbrev,
	index-or-complete and setup variable
	hippie-expand-try-function-alist

	* rails-snippets.el (rails-snippets:list): updated

	* rails-core.el (rails-core:menu-position): fixed error at `window-live-p'

	* rails-ui.el (rails-minor-mode-menu-bar-map): added menu item for "test current method"

	* rails-ws.el (rails-ws:start): added missing parameter the
	rails-ws:default-server-type to startup command

	* rails-scripts.el (rails-script:toggle-output-window): created

	* rails-ws.el (rails-ws:start): fixed bug [#9619], incorect setup of default directory

	* rails-snippets.el (rails-snippets-menu-list): removed
	(rails-snippets:create-keymap, rails-snippets:create-lambda)
	(rails-snippets:list): created

	* rails-lib.el (create-snippets-and-menumap-from-dsl): removed

2007-03-27  dima  <dima.exe@gmail.com>

	* rails-snippets.el (rails-snippets-menu-list): updated snippets,
	add the "assert_template" snippet

	* rails-rake.el (rails-rake:test-current): created
	(rails-rake:run-test-file): created
	(rails-rake:test-current-method): created

	* rails-unit-test-minor-mode.el (rails-unit-test-minor-mode):
	added hotkey [C-c .] to run test of current method

	* rails-functional-test-minor-mode.el (rails-functional-test-minor-mode): 
	added hotkey [C-c .] to run test of current method

	* rails-core.el (rails-core:functional-test-file)
	(rails-core:unit-test-file, rails-core:observer-p)
	(rails-core:mailer-p): allow passing nil
	(rails-core:current-method-name): renamed from rails-core:current-function-name
